[package]
name = "switchbot_ble_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.5"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1.8.0"
