[package]
name = "switchbot_ble_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
btleplug = "0.11.5"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["net", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.15"
uuid = "1.8.0"
