[package]
name = "switchbot_ble_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
btleplug = "0.11.5"
chrono = "0.4.38"
env_logger = { version = "0.11.3", default-features = false, features = [
    "humantime",
] }
log = "0.4.21"
prometheus = { version = "0.13.4", default-features = false }
tokio = { version = "1.38.0", features = ["net", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.15"
uuid = "1.8.0"
